src/sass/pages/restaurant/_about-kitchen.scss
// KITCHEN SECTION
.about-our-kitchen {
  position: relative;
  background-color: $colorBgLemon;

  .container {
    position: relative;
    padding-top: 16px;
    padding-bottom: 16px;
    @include tablet {
      padding-top: 120px;
      padding-bottom: 32px;
    }
  }
}

.about-kitchen__slogan {
  margin-bottom: 13px;
  font-family: 'Times New Roman';
  font-style: normal;
  font-weight: 400;
  line-height: 1.15;
  font-size: 20px;
  letter-spacing: 0;
  color: $colorTextSecondary;
  @include tablet {
    margin-bottom: 4px;
    font-size: 32px;
  }
}

.restaurant-logo {
  color: $colorTextAddressMobTab;
  margin-bottom: 12px;
  @include tablet {
    font-size: 64px;
    margin-bottom: 24px;
  }
}

.kitchen-card {
  position: relative;
  display: flex;
}

.kitchen-card:first-child {
  flex-wrap: wrap;
  margin-bottom: 32px;

  @include tablet {
    margin-bottom: 338px;
  }
  @include desktop {
    margin-bottom: 350px;
  }
  .kitchen-card__description {
    width: 258px;
    margin-bottom: 28px;
    @include tablet {
      width: 439px;
      margin-bottom: 0;
    }
    @include desktop {
      width: 518px;
    }
  }
  .kitchen-card__photo {
    margin-left: auto;
    position: relative;
    z-index: 5;
    @include tablet {
      position: absolute;
      right: 65px;
      top: -286px;
    }
    @include desktop {
      right: 95px;
      top: -286px;
    }
  }
}

.kitchen-card:last-child {
  align-items: center;
  column-gap: 20px;
  margin-bottom: 32px;

  @include tablet {
    margin-bottom: 154px;
  }
  @include desktop {
    margin-bottom: 124px;
  }
  .kitchen-card__description {
    padding-bottom: 20px;
    max-width: 163px;
    @include tablet {
      width: 312px;
      padding-bottom: 0;
      margin-left: auto;
      margin-right: 220px;
    }
    @include desktop {
      margin-right: 305px;
    }
  }
  .kitchen-card__photo {
    @include tablet {
      position: absolute;
      left: 0;
    }
    @include desktop {
      top: -188px;
    }
  }
}

.kitchen-card__description {
  font-weight: 600;
  font-size: 12px;
  line-height: 15px;
  letter-spacing: 0.02em;
  @include tablet {
    font-size: 16px;
    line-height: 20px;
  }
}
.kitchen-card__description--gray {
  color: $colorTextPrimary;
}
.kitchen-card__description--orange {
  color: $colorBrown;
}

.kitchen-card__photo {
  background: #dadada;
  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
  border-radius: 2px;
}

// KITCHEN SLIDER ARROWS
.slider-arrows {
  display: inline-flex;
  width: 100%;
  gap: 32px;
  margin-top: 20px;
  justify-content: flex-end;
  padding-right: 2px;
  @include tablet {
    margin-top: 32px;
  }
}

.right-arrow,
.left-arrow {
  width: 32px;
  height: 32px;
  background-image: url(../images/slider-arrow.svg);
  background-size: cover;
  outline: none;
  border: none;
  background-color: transparent;
}

.right-arrow {
  transform: rotate(180deg);
}

// KITCHEN SLIDER CONTAINER
.kitchen-slider-box {
  position: relative;
  z-index: 5;
  @include mobile {
    padding-left: 69px;
  }
  @include tablet {
    padding-left: 0;
    padding-right: 13px;
  }
  @include desktop {
    padding-right: 0;
  }
}

.kitchen-slider {
  position: relative;
  margin-right: -15px;
  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
  border-radius: 2px;
  @include tablet {
    width: 428px;
    margin-left: auto;
    margin-right: 0;
  }
  @include desktop {
    width: 530px;
  }
}

.kitchen-slide {
  img {
    display: block;
    box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
    border-radius: 2px;
  }
}

div.kitchen-slide {
  margin-right: 24px;
  @include tablet {
    margin-right: 40px;
  }
}

